tests/typing/bad/testfile-redef-4.s
	.text
	.globl main
f:
	ret
main:
	ret
	.data
f:
